更新render環境設定
