# app.js
@@ -45,8 +45,8 @@ app.use(express.static(path.join(__dirname, "public")));
 app.use("/api-doc", swaggerUI.serve, swaggerUI.setup(swaggerFile));
 
 app.use("/v1/api/auth", usersRouter);
-app.use("/v1/api/Admin/Account", AccountRouter);
-app.use("/v1/api/Admin/Upload", UploadRouter);
+app.use("/v1/api/admin/account", AccountRouter);
+app.use("/v1/api/admin/upload", UploadRouter);
 
 // 404 錯誤
 app.use(function (req, res, next) {
